# comic-translation

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
comic/: __init__.py  hello.py  inpainting.py  text-detection.py  text_block_detection.py  text_detector.py  text_generator.py  text_translator.py  translate.py  translator.py
comic_translation.egg-info/: PKG-INFO  SOURCES.txt
notebooks/: inpainting.ipynb
test/: test_hello.py
